--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.servlet.multipart.max-file-size=25MB
 spring.servlet.multipart.max-request-size=128MB
 
 #RateLimit
-rate.limit.global.limit=1000000
-rate.limit.global.window=30000
+rate.limit.max=1000000
+rate.limit.time=60
 
 # Datasource configuration for PostgreSQL
 spring.sql.init.platform=postgres
